reference-architectures/networking-for-ai-inference/k8s/models/base/service.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
    name: llm-service
    annotations:
        cloud.google.com/neg: '{"exposed_ports": {"8000":{"name": "base-model-neg"}}}'
    labels:
        app.kubernetes.io/name: vllm-server
        app.kubernetes.io/component: inference-server
spec:
    selector:
        app: vllm-server
    type: ClusterIP
    ports:
        - name: http
          protocol: TCP
          port: 8000
          targetPort: 8000
